# laq-fr

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.DOCKER.md  README.md  SECURITY.md  VALIDATION_CHANGES_2025-12-29.md  docker-compose.yml  requirements.txt  test_validation.py
.github/workflows/: ci.yml
archive/: DESIGN_GUIDE.md  FEATURES_UPDATE.md  ICONS_UPDATE.md  MIGRATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.old.md  STYLE_GUIDE.md  database.py  embeddings.py  main.py  pdf_processor.py  pyproject.toml  rag.py
archive/tests/: test_config.py  test_pdf_processor.py
backend/: .dockerignore  .env.example  Dockerfile  mb.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: annexure.py  annexure_list.py  chat.py  cleanup.py  dashboard.py  database.py  laqs.py  manual_entry.py  search.py  upload.py  validation.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: config.py  database.py  embeddings.py  excel_processor.py  pdf_processor.py  rag.py  validation.py
backend/tests/: README.md  __init__.py  test_config.py  test_pdf_processor.py
docs/: ARCHITECTURE.md  PERFORMANCE_IMPROVEMENTS.md  dashboard_reference.html
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: Chat.css  Chat.jsx  Dashboard.css  Dashboard.jsx  Database.css  Database.jsx  (+8 more)
(+8 files in other folders)
